<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".Signup">


    <TextView
        android:id="@+id/signup_email_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email_number"
        android:textSize="15sp"
        android:layout_marginLeft="3dp"/>

    <EditText
        android:id="@+id/signup_email_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_email_number"
        android:ems="10"
        android:inputType="text"
        android:text=""
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/signup_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd"
        android:layout_below="@+id/signup_email_number_input"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"/>

    <EditText
        android:id="@+id/login_pwd_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:layout_below="@+id/signup_pwd"
        tools:ignore="TextFields"
        />

    <TextView
        android:id="@+id/signup_con_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/con_pwd"
        android:layout_below="@+id/login_pwd_input"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"/>

    <EditText
        android:id="@+id/signup_pwd_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:layout_below="@+id/signup_con_pwd"
        tools:ignore="TextFields"
        />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/signup_pwd_input"
        android:backgroundTint="@color/orange"
        android:layout_centerHorizontal="true"
        android:background="@drawable/highlight_btn"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/signup"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signup"
        android:layout_marginTop="15dp"
        android:id="@+id/or"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:layout_marginRight="40dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"/>




    </LinearLayout>


</RelativeLayout>