<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="false"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".Login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="Email"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/black"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:hint="Password"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/black"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        android:id="@+id/password"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_pwd" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/highlight_btn"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="15dp"
        android:id="@+id/or"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:layout_marginRight="40dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"/>

    </LinearLayout>
</RelativeLayout>